                       __        __             _       
                       \ \      / /__ _ __   __| |_   _ 
                        \ \ /\ / / _ \ '_ \ / _` | | | |
                         \ V  V /  __/ | | | (_| | |_| |
                          \_/\_/ \___|_| |_|\__,_|\__, |
                                                  |___/
                      http://service-technology.org/wendy


Version 1.2-unreleased
======================

*
Version 1.1
===========

* implemented synchronous communication

* renamed `--showDeadlocks' to `--showWaitstates'

* the list of interface labels are printed when `--verbose' is used

Version 1.0
===========

* initial release of Wendy

* calculates the operating guidelines of a normal open net

* result can be written in Fiona's OG format (with explicit formulae or 2 bit
  representation)


