@@ -1,6 +1,6 @@
 @heading Version 1.2-unreleased
 @itemize
-@item 
+@item implemented new OG file format -- the deprecated format can still be used with @option{--fionaFormat} parameter which is implicitly used in case @option{-t OG} is used
 @end itemize
 
 @heading Version 1.1
