@@ -24,6 +24,12 @@ option "show" s
   multiple
   hidden  
 
+option "fionaFormat" -
+  "Use the deprecated Fiona OG file format."
+  dependon="og"
+  flag off
+  hidden
+
 
 section "Output"
 
