@@ -6,5 +6,5 @@ if test "$FIONA" = "not found"; then
   exit 77
 fi
 
-wendy bug1.owfn --og --verbose &>result.log
+wendy bug1.owfn --fionaFormat --og --verbose &>result.log
 fiona -tequivalence bug1.og bug1.fiona.og >>result.log 2>&1
