@@ -6,5 +6,5 @@ if test "$FIONA" = "not found"; then
   exit 77
 fi
 
-wendy bug4.owfn --og --verbose &>result.log
+wendy bug4.owfn --fionaFormat --og --verbose &>result.log
 fiona -tequivalence bug4.og bug4.fiona.og >>result.log 2>&1
