@@ -6,5 +6,5 @@ if test "$FIONA" = "not found"; then
   exit 77
 fi
 
-wendy PO.owfn --og --verbose &>result.log
+wendy PO.owfn --fionaFormat --og --verbose &>result.log
 fiona -tequivalence PO.og PO.fiona.og >>result.log 2>&1
